--- a/public/first_vue.html
+++ b/public/first_vue.html
@@ -9,39 +9,55 @@
 
   <body>
     <div id="app">
-      <!-- 説明 2.1 -->
       <p>{{ message }}</p>
       <p>{{ message2 }}</p>
       <button v-on:click="changeMsg">Change</button>
-      <!-- 説明 2.2 -->
+      <ul>
+        <li v-for="data in list">{{ data.title }}</li>
+      </ul>
+      <button v-on:click="listSnippet">listSnippet</button>
+      <div>
+        <input v-model="title" placeholder="title" />
+        <input v-model="language" placeholder="language" />
+        <input v-model="contents" placeholder="contents" />
+      </div>
+      <button v-on:click="postSnippet">postSnippet</button>
     </div>
 
     <script>
       new Vue({
-        // 説明 2.3
-        el: "#app", // 説明 2.4
+        el: "#app",
         data() {
-          // 説明 2.5
           return {
-            message1: "Hello Vue!",
-            message: "Hoge",
+            message: "Hello Vue!",
+            message2: "Hoge",
             list: [{ title: "title1" }, { title: "title2" }],
+            title: "new title",
+            language: "Ruby",
+            contents: "contents",
           };
         },
         mounted() {
-          // 説明 2.7
-          this.setMsg(); // 説明 2.8
+          this.setMsg();
         },
         methods: {
-          // 説明 2.9
           setMsg: function () {
-            // 説明 2.10
-            this.message = "Set Message"; // 説明 2.11
+            this.message = "Set Message";
           },
           changeMsg: function () {
             this.message = "Changed Message";
             axios.get("/snippets.json").then((response) => (this.message2 = response.data[0]["title"]));
             this.message2 = this.list[0]["title"];
+          },
+          listSnippet: function () {
+            axios.get("/snippets.json").then((response) => (this.list = response.data));
+          },
+          postSnippet: function () {
+            axios
+              .post("/snippets.json", { title: "new title", language: "Ruby", contents: "contents" }) // 説明 2.21
+              .then(
+                (response) => this.listSnippet() // 説明 2.22
+              );
           },
         },
       });
